Small improvement in functionability in getOrCreateRoom method